fixed spacing again

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header video {
 .aboutme .photo img {
     width: 350px;
     height: auto;
-    padding-bottom: 12em;
+    padding-bottom: 5em;
 }
 
 .aboutme .nametag {
@@ -365,7 +365,7 @@ header video {
     background-color: #3d3d3d;
     padding-right: 8em;
     padding-left: 8em;
-    padding-top: 13.5em;
+    padding-top: 14em;
     padding-bottom: 12em;
 }
 
